--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,28 @@
 name: CI/CD
 on:
-  push:
-    branches: [ main ]
+    push:
+        branches: [main]
 
-  workflow_dispatch:
+    workflow_dispatch:
 
 jobs:
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - uses: actions/setup-node@v2
+              with:
+                  node-version: "14"
+                  cache: "npm"
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-          cache: 'npm'
-  
-      - name: Build project 🔧
-        run: | 
-          npm install
-          npm run build
-        
-      # Deploy latest contribution to GitHub pages
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.5
-        with:
-          branch: gh-pages
-          folder: _build
+            - name: Build project 🔧
+              run: |
+                  npm install
+                  npm run build
+
+            # Deploy latest contribution to GitHub pages
+            - name: Deploy 🚀
+              uses: JamesIves/github-pages-deploy-action@4.1.5
+              with:
+                  branch: gh-pages
+                  folder: build
