--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "noEmit": true,
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
-        "strict": true
+        "strict": true,
+        "sourceMap": true
     },
     "include": [
         "./src/**/*"
