框架基本完成。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
     "typescript.tsdk": "./node_modules/typescript/lib",
     "cSpell.words": [
         "acho",
+        "anims",
         "bodyparts",
         "bodysetting",
         "buble",
