--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "start": "snowpack dev",
         "prebuild": "tsc && npm run lint",
         "build": "snowpack build",
-        "lint": "eslint src --cache --ext .ts",
-        "lint:fix": "eslint src --cache --ext .ts --fix",
+        "lint": "eslint src --ext .ts",
+        "lint:fix": "eslint src --ext .ts --fix",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Ureium",
