--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
     "cSpell.words": [
         "acho",
         "anims",
+        "binball",
         "bodyparts",
         "bodysetting",
         "buble",
