--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,34 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
+        "outDir": "./dist/",
+        "target": "esnext",
         "moduleResolution": "node",
+        "module": "es6",
+        "isolatedModules": false,
         "noEmit": true,
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
         "strict": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "baseUrl": "./",
+        "paths": {
+            "@/*": [
+                "src/*"
+            ],
+            "@@/*": [
+                "./*"
+            ],
+            "@assets/*": [
+                "src/renderer/assets/*"
+            ]
+        }
     },
     "include": [
-        "./src/**/*"
+        "src/**/*",
+        "assets/**/*",
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
     ]
 }
