--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,6 @@
 # TypeScript definitions installed by Typings
 /typings
 
-# Screeps Config
-screeps.json
-
-# ScreepsServer data from integration tests
-/server
-
 # Numerous always-ignore extensions
 *.diff
 *.err
@@ -90,3 +84,5 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+/out
