--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
     "description": "ball",
     "main": "dist/main.js",
     "scripts": {
-        "start": "npm run pack && electron .",
+        "watch": "cross-env NODE_ENV=development webpack --watch",
+        "start:forge": "electron-forge start",
+        "start": "electron .",
         "pack": "cross-env NODE_ENV=development webpack",
         "prebuild": "tsc && npm run lint",
         "build": "cross-env NODE_ENV=production webpack",
         "lint": "eslint src --ext .ts",
         "lint:fix": "eslint src --ext .ts --fix",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "package:forge": "electron-forge package",
+        "make:forge": "npm run build && electron-forge make"
     },
     "author": "Ureium",
     "license": "MIT",
     "devDependencies": {
+        "@electron-forge/cli": "^6.0.0-beta.63",
+        "@electron-forge/maker-deb": "^6.0.0-beta.63",
+        "@electron-forge/maker-rpm": "^6.0.0-beta.63",
+        "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
+        "@electron-forge/maker-zip": "^6.0.0-beta.63",
         "@types/lodash": "^4.14.182",
         "@typescript-eslint/eslint-plugin": "^5.25.0",
         "@typescript-eslint/parser": "^5.25.0",
@@ -28,16 +37,44 @@
         "http-server": "^14.1.1",
         "phaser": "^3.55.2",
         "prettier": "^2.6.2",
-        "snowpack": "^3.8.8",
         "typescript": "^4.6.3",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.9.2"
     },
     "dependencies": {
         "electron-connect": "^0.6.3",
+        "electron-squirrel-startup": "^1.0.0",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "lodash": "^4.17.21",
-        "ts-loader": "^9.3.0"
+        "ts-loader": "^9.3.0",
+        "ts-node": "^10.8.1"
+    },
+    "config": {
+        "forge": {
+            "packagerConfig": {},
+            "makers": [
+                {
+                    "name": "@electron-forge/maker-squirrel",
+                    "config": {
+                        "name": "ball"
+                    }
+                },
+                {
+                    "name": "@electron-forge/maker-zip",
+                    "platforms": [
+                        "darwin"
+                    ]
+                },
+                {
+                    "name": "@electron-forge/maker-deb",
+                    "config": {}
+                },
+                {
+                    "name": "@electron-forge/maker-rpm",
+                    "config": {}
+                }
+            ]
+        }
     }
 }
