--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
         "target": "esnext",
         "moduleResolution": "node",
         "module": "es6",
-        "isolatedModules": false,
         "noEmit": true,
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
@@ -26,9 +25,17 @@
     "include": [
         "src/**/*",
         "assets/**/*",
+        "webpack.config.ts"
     ],
     "exclude": [
         "node_modules",
         "dist"
-    ]
+    ],
+    "ts-node": {
+        "compilerOptions": {
+            "esModuleInterop": true,
+            "target": "ESNext",
+            "module": "commonjs",
+        }
+    }
 }
